test/suites/fail-check/003.expected
  × One or more errors occured.

Error: T-002

  × The following terms are not equal:
  │   1: Foo(False)
  │   2: Foo(True)
  │ 
    ╭─[003.pol:13:11]
 12 │     Bar : Foo(True),
 13 │     Baz : Foo(False),
    ·           ─────┬────
    ·                ╰── Source of (1)
 14 │ }
 15 │ 
 16 │ def Foo(True).foo() : Nat {
    ·     ────┬────
    ·         ╰── Source of (2)
 17 │     Bar() => Z,
 18 │     Baz() absurd,
 19 │ }
 20 │ 
 21 │ data Unit { Top }
 22 │ 
 23 │ def Unit.example : Nat {
 24 │    Top =>  Baz.foo
    ·            ─┬─
    ·             ╰── While elaborating
 25 │ }
    ╰────
  help: The two subterms False and True are not equal.
