test/suites/fail-check/003.pol
codata Bool {}

codef True(): Bool {}
codef False(): Bool {}

data Nat {
    Z: Nat,
    S(n: Nat) : Nat,
}

data Foo(b: Bool) {
    Bar : Foo(True),
    Baz : Foo(False),
}

def Foo(True).foo() : Nat {
    Bar() => Z,
    Baz() absurd,
}

data Unit { Top }

def Unit.example : Nat {
   Top =>  Baz.foo
}
